# ChangeLog for sys-apps/elfix
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/elfix/ChangeLog,v 1.87 2014/11/03 13:01:42 blueness Exp $

*elfix-0.9.0 (03 Nov 2014)

  03 Nov 2014; Anthony G. Basile <blueness@gentoo.org> +elfix-0.9.0.ebuild:
  Version bump, fixes bug #525240

  09 Sep 2014; Patrick Lauer <patrick@gentoo.org> -elfix-0.8.1.ebuild,
  -elfix-0.8.3.ebuild, -elfix-0.8.5.ebuild:
  Remove versions with unsatisfied dependencies after pypax cleanup

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> elfix-0.8.1.ebuild,
  elfix-0.8.3.ebuild, elfix-0.8.4.ebuild, elfix-0.8.5.ebuild,
  elfix-0.8.6.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*elfix-0.8.6 (30 Jul 2014)

  30 Jul 2014; Anthony G. Basile <blueness@gentoo.org> +elfix-0.8.6.ebuild:
  Version bump, builds fix-gnustack contingent on --enable-ptpax

*elfix-0.8.5 (07 Jun 2014)

  07 Jun 2014; Anthony G. Basile <blueness@gentoo.org> +elfix-0.8.5.ebuild:
  Version bump, adds compat with BSD and musl

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> elfix-0.8.4.ebuild:
  Stable for sparc, wrt bug #495624

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> elfix-0.8.4.ebuild:
  Stable for x86, wrt bug #495624

  19 Jan 2014; Pacho Ramos <pacho@gentoo.org> elfix-0.8.4.ebuild:
  amd64 stable, bug 495624

  18 Jan 2014; Agostino Sarubbo <ago@gentoo.org> elfix-0.8.4.ebuild:
  Stable for alpha, wrt bug #495624

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> elfix-0.8.4.ebuild:
  Stable for ia64, wrt bug #495624

  28 Dec 2013; Anthony G. Basile <blueness@gentoo.org> elfix-0.8.4.ebuild:
  Stable arm, bug #495624

  27 Dec 2013; Anthony G. Basile <blueness@gentoo.org> elfix-0.8.4.ebuild:
  Stable for ppc and ppc64, bug #495624

  26 Dec 2013; Jeroen Roovers <jer@gentoo.org> elfix-0.8.4.ebuild:
  Stable for HPPA (bug #495624).

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> elfix-0.8.3.ebuild:
  Stable for sparc, wrt bug #474200
