@@ -2,27 +2,25 @@
 Hash: SHA256
 
 DIST elfix-0.8.4.tar.gz 374742 SHA256 374be66da3dddef485bbb5e95bfcab6fd0c2db478255bddd10079730ada5260b SHA512 10aacc3fff33c934e2d4487d174a2b0cec10ffb7a35fc72b160c786f82f0355f3a2dea716bc7fb929d2919cc32a26844f37f9d73064b755098bdaa72e8075bda WHIRLPOOL b04e099f188c0b76d8c07abd76559c1313854aa83a03ad69afb72674d93cde6ce538ae10d0fea3be5495937e72a4b98fdd36efbb2e3aa8ff23c1d9f7f943c1ae
-DIST elfix-0.8.6.tar.gz 375265 SHA256 680758b46f645b7ebdfd766b696edaf3703148ca372de7770aa434b3ba3b4e8c SHA512 7a614df376c31782adffbc25d31d068cbc00d185c6c7cc2401c33dbc65c61c5d69a98fab2d3fd2ba63b27c657280c8dc2888a85266000010f75cea7a0b7b142f WHIRLPOOL 7eb45572ed1831ce0298ebe5ab2a354a93d722297ba333e4799200da63c52baff3e182f72857343c3cc27b1f91972e85aa9769403fe9fcd1d80fe9986e38e438
 DIST elfix-0.9.0.tar.gz 372014 SHA256 8b547d987edb2f7dc23ddf30f959d7d051a9ed49810f983b8fe6c489fe731cf0 SHA512 fd9bab90d745f77429c902acd2a14f615132731b3c38929dce764f1e5f7ee8f6478a6fef7ce0cb38e7ebd9181ba57965ff0c97da5e01d0fbf2cfb940ed691ebf WHIRLPOOL c09fa2193b990a506cae17f370ec10fa6302e17d2a165e42eceb88644f8a92e297c839ad788204e213d8205695b65557a7dcef5f6417177c434c8d0a34bd5eb7
 EBUILD elfix-0.8.4.ebuild 1039 SHA256 995ddc2f2387cae8cc597e5eb308c449c5710414dcdb806b8bb81364471dbaa9 SHA512 b07a517afa6a2b4e9146f5cf8747380ed7fd2bde4635e8cdb846f1cef3a509ef861465b88fac88adb604de770b31f9a295589a47df6046134c06713108f050cd WHIRLPOOL 57dcd51572ec2f399811e3716efb58f651a4199a7143879fc1abc90216113ddf56b489dd75ef690fee8b314ec1d96923c948cc30fdded84b80b2ed8bc76cc289
-EBUILD elfix-0.8.6.ebuild 1047 SHA256 75eba8447aee455e373439b05277dd7bf87016e9b0795e4b5fdcf74b5f0075ab SHA512 3b5d5f332efd29afa4b91bb3341a2a782e4832df6369639c12be5ac9ecb79ca03fc394ed86ab3080efe5067cd83db96901674ccbdd90363295c14c17cfd1b37f WHIRLPOOL 4a48c4739c8a4b66cb5cce534e15436ed3e63e76bdbfe1d2c0af37ad3724722e10b64c49ccdb34595c8d760cac4297cd52b90acab34296f0c758d57c306dcf5f
 EBUILD elfix-0.9.0.ebuild 1049 SHA256 4a62dfb89bdf47dc70444c67a7d6b5d91e5e437054dd17c37d4f83a9576cfa4e SHA512 e4ba46f1c0739eb98f490bce7ed421a97e6eb6c06bf765d25f2431d55197ed720318c9da4304ecf850bbb299b482f59a1f5add1de5311ff4d983cbde32cdc648 WHIRLPOOL e5049007f8b6e2c5748967ca8540459b03fbebb859c735442b749f8b86c3c4d07fced69ef7ff1ff6c1c0fdb78353436f232ef578af88cde753ae3fe69c804c23
-MISC ChangeLog 11413 SHA256 955441954cf398d22f25acbf53d1f7752f46d398fe59d527a8137f995450107b SHA512 b9e34fa5ad7b6f45aaaecf6ae3effd92c630d5329a2917589c92944b5691576249bcc7805802b27090664be906c5537e877f1d0b8951ff730593eaaef1b57807 WHIRLPOOL c8f4daf23b5e72d997ecf54e0e7f0e8a2b6ed6cd0621e4d9a66ad0b2b90fabfe0228734386fbaaac8b3777bf7703cb8583401eb20b2af5f944b6923d0bfbe9f6
+MISC ChangeLog 11514 SHA256 bcaa28fa2492cc0af8a103b8b2c1868ff66ca08f7155695b3a4aa9f6c6c75e9d SHA512 836d39b8c17aa33bdd0120dc500303804bd25447cd20c38130cdee3ccd817a97a9f4356f38c79e401bb0e184c1e5d9aea401788b3a41208c20458cc3f5aaf89a WHIRLPOOL cfe8dcb0baf01cf702838c446b2122abd0b91632ed6cd4c6f3626cdbee9b7c35d7b4ac47e70fa55d14b4221f514dbea02f3b90c122a6703624aeec8933da33b2
 MISC metadata.xml 393 SHA256 81a4b48fc98f0eaa825c15e5aab31a9c2eb0557d7c47d7453963d5f1d247a7ef SHA512 970b25df4289226f1a5e22a98f97f413f14c00c2454100b0e56d96d8f6ba4cc592aef36af569549bf884d49278cbe3de91799d4fdf1d38c318aae414610a075f WHIRLPOOL aa59e113a09a9b16fb579800b695c11c6d63626362db57098544eafff52cb34b3470256ce7ff392f10226e1546f2f60a9737f0ea32ed3875000f0566c82eb270
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUV30qAAoJEJOE+m71LUu6IlIP/Agad20+UMuv12+cEJL9YRX9
-lSD1ssfLiuEmW43cVropm+HcZjrfHhqrb4eifMgTy6fiY0Xc/ZOW/ND9CcxQHUUO
-T0wGBs8aoF0IzBkYCyTiRX07WR2cZC9jWLDgG6LCxWdidk/8Iyp9SS7Dw7aMlhIn
-N37rWh2awc4yE7gx/9XrC81QojVwTolkJE6Xh4bVL733ut8E2RKlgsSGb9Lt/6bN
-OBBmn2F4UvNo38SDrTXolxHTvLqtLTRpSZ+WadeiVrVfb66tYH7KgUdDpXFU1Npe
-b04JHUPcYUAszRPenHUNWCK0e1gi2ZgbUA6dzZBcFHBarczBiopCHpe73/Cec9uC
-p6d2D1vN7o8iU7SoHQeaGYh8Rln3Awm2IFlu12Pto6A4nUDaeVxK+u4WefhTB4RR
-9FFMGYuBKGF0EeTP7muh/+DPSpCoaqh+5jjGjZ0BVWdCIIYzyoSTOtUAimNruBPZ
-UEyyPpb3DLLcWdkgXfY3SLIkC7yGZ+krtYFP8gOKP7RSqZ2NLh3+CGFG1UB1PqNu
-gWC4sogixm5/hQMDCmAhHq5cb05zhDG8+++cB/FBv92H6er3w924VT1tOt3379h6
-C8QY8H3ak0Nrrwy3G5jqOpVq8ZTFv/CKqOxq2MGVmqt6beTl2QTrzosC6OmiHwPU
-uVoGJyXrAQesh39ZYIAE
-=mdHl
+iQIcBAEBCAAGBQJUV3/oAAoJEJOE+m71LUu6SJQP/jQUMeKkIGuL2swo9tvLf2jA
+y1OFlR0gOvjLSg5dNRFB6+nooSVNd9E2UsiRI0MnDbYAIf59xPWwAkUfTViXWa/D
+Knmq1rMmceOMdb2s9EzS9/zkFS8kffbKL5BMT01BpbbqPNjos6sHGq/0Z4neB3Pr
+ysQCvQRrj0usIUyKVV9TqRvDzFoVGtki1luOQwxos3zJYUrvE3cXWsYYVdoFnqhX
+tQ0wN3Xlr+N1LWjU5iSdOtIL7kVX3Je767KKtzYKrZKvJUXTVSUpbjYFWa6gB9xa
+DUai9U9i5EMDLiKqlJl+4RU8X9cgpEaqJdbQ7T4Ei12rDj8t1UO43CquocAc46cq
+oeLqbbnVaxmBe9eSd+0qkVfuW2PuvegmHi/duwJAyWI9ml1PY2mSVR5LYBjT0DbS
+gUz/DBCIzg6HVK/vtVdC/5wmb/FHvHzWIIqauvFKAdIuYHsFWfaFPxgz4qWa+5dJ
+8A4mL8ptEoWaqotZjQZ1RU44gxzFznVwQAeiyH/mfwkt48tB6/+eVLQ2LTeL2CoI
+FfR48+1PM/p/7ZDY7Xq88/hJUHow09WFuekR6Gfh4b/a5hvFv0lCeGLC309tMDgY
+pHfpipsU5k3zkX9L0ummh2p4+2X5HGBSB1Vay+xtYX/a5zPjXdmbqw+VdJGl+44m
+wRoiV0mbs3rpyRfUxPJ3
+=kZq+
 -----END PGP SIGNATURE-----
