@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/elfix
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/elfix/ChangeLog,v 1.87 2014/11/03 13:01:42 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/elfix/ChangeLog,v 1.88 2014/11/03 13:13:26 blueness Exp $
+
+  03 Nov 2014; Anthony G. Basile <blueness@gentoo.org> -elfix-0.8.6.ebuild:
+  Remove older unstable
 
 *elfix-0.9.0 (03 Nov 2014)
 
